# Operating-Systems-BSU-Lab-4

./: CMakeLists.txt  OS_Laboratory_Work_4.cpp  OS_Laboratory_Work_4.h  README.md  message_queue.h  message_queue_test.cpp  receiver.cpp  sender.cpp
